--- a/src/geopd/static/css/geopd.css
+++ b/src/geopd/static/css/geopd.css
@@ -193,3 +193,8 @@ div.geopd-label span {
     padding: 0;
     margin: 0;
 }
+
+input[readonly] {
+    color: #999999 !important;
+    background-color: #ffffff !important;
+}
