--- a/src/geopd/templates/users/index.html
+++ b/src/geopd/templates/users/index.html
@@ -1,130 +1,154 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid">
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h2 class="panel-title">Members</h2>
-        </div>
-        <div class="panel-body">
+    <div class="container-fluid">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h2 class="panel-title">Members</h2>
+            </div>
+            <div class="panel-body">
 
-            <ul class="nav nav-tabs">
-                <li role="presentation" class="active">
-                    <a id="list-tab" href="#users-list" data-toggle="tab">Detailed List</a>
-                </li>
-                <li role="presentation">
-                    <a id="map-tab" href="#users-map" data-toggle="tab">World Map</a>
-                </li>
-            </ul>
+                <ul class="nav nav-tabs">
+                    <li role="presentation" class="active">
+                        <a id="list-tab" href="#users-list" data-toggle="tab">Detailed List</a>
+                    </li>
+                    <li role="presentation">
+                        <a id="map-tab" href="#users-map" data-toggle="tab">World Map</a>
+                    </li>
+                </ul>
 
-            <div class="tab-content">
-                <div class="tab-pane fade in active" id="users-list">
-                    <table id="users" class="table table-striped table-hover table-condensed" cellspacing="0"
-                           width="100%">
-                        <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Institution</th>
-                            <th>City</th>
-                            <th>Member since</th>
-                            <th>Last seen</th>
-                        </tr>
-                        </thead>
-                    </table>
-                </div>
-                <div class="tab-pane fade" id="users-map">
-                    <div id="map"></div>
+                <div class="tab-content">
+                    <div class="tab-pane fade in active" id="users-list">
+                        <table id="users" class="table table-striped table-hover table-condensed" cellspacing="0"
+                               width="100%">
+                            <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Institution</th>
+                                <th>City</th>
+                                <th>Member since</th>
+                                <th>Last seen</th>
+                            </tr>
+                            </thead>
+                        </table>
+                    </div>
+                    <div class="tab-pane fade" id="users-map">
+                        <div id="map"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-</div>
+    </div>
 {% endblock %}
 
 {% block scripts %}
-{{ super() }}
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8-PS6246ge-nX02b-B9vst_3SF909Jis&callback=initMap"
-        async defer></script>
-<script>
+    {{ super() }}
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8-PS6246ge-nX02b-B9vst_3SF909Jis&callback=initMap"
+            async defer></script>
+    <script>
 
-    function create_info_window_html(user) {
-        var container = $('<div/>').append(
-                $('<div/>').addClass('info-window')
-                .append($('<a/>').attr('href', user.profile).html($('<h4/>').html(user.name)))
-                .append($('<p/>').html(user.institution))
-                .append($('<em/>').html(user.city)));
-        return container.html();
-    }
+        function create_info_window_html(user) {
+            var container = $('<div/>').append(
+                    $('<div/>').addClass('info-window')
+                            .append($('<a/>').attr('href', user.profile).html($('<h4/>').html(user.name)))
+                            .append($('<p/>').html(user.institution))
+                            .append($('<p/>')
+                                    .append($('<span/>').addClass('glyphicon glyphicon-envelope'))
+                                    .append(' ')
+                                    .append(user.email)));
+            if (user.address) {
+                container.find('div.info-window').append($('<p/>')
+                                    .append($('<span/>').addClass('glyphicon glyphicon-map-marker'))
+                                    .append(' ')
+                                    .append(user.address));
+            }
 
-    var map = null;
-    function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: 60.0, lng: -120.0},
-            zoom: 3,
-        });
+            return container.html();
+        }
 
-        {% for user in users %}
-            var marker{{ loop.index }} = new google.maps.Marker({
-               position: {lat: {{ user.institution.latitude }}, lng: {{ user.institution.longitude }}},
-               map: map,
-               title: '{{ user.name }}',
+        var map = null;
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: {lat: 60.0, lng: -120.0},
+                zoom: 3,
             });
 
-            marker{{ loop.index }}.addListener('click', function() {
-               new google.maps.InfoWindow({
-                   content: create_info_window_html({
-                       profile: '{{ url_for("web.show_user", id=user.id) }}',
-                       name: '{{ user.name }}',
-                       institution: '{{ user.institution.name }}',
-                       city: '{{ user.institution.city }}',
-                   })
-               }).open(map, marker{{ loop.index }});
+            {% for user in users %}
+                {%- if user.address.latitude is not none and user.address.longitude is not none -%}
+                var marker{{ loop.index }} = new google.maps.Marker({
+                    position: {lat: {{ user.address.latitude }}, lng: {{ user.address.longitude }}},
+                    map: map,
+                    title: '{{ user.name }}',
+                });
+
+                marker{{ loop.index }}.addListener('click', function () {
+                    new google.maps.InfoWindow({
+                        content: create_info_window_html({
+                            profile: '{{ url_for("web.show_user", id=user.id) }}',
+                            name: '{{ user.name }}',
+                            email: '{{ user.email }}',
+                            institution: '{{ user.address.institution }}',
+                            address: '{{ user.address }}',
+                        })
+                    }).open(map, marker{{ loop.index }});
+                });
+                {%- endif -%}
+            {%- endfor -%}
+        }
+
+        var users = [];
+        {% for user in users %}
+            users.push({
+                profile: '{{ url_for('web.show_user', id=user.id) }}',
+                last_name: '{{ user.last_name }}',
+                given_names: '{{ user.given_names }}',
+                institution: '{{ user.address.institution|default('') }}',
+                city: {% if user.address.city %}'{{ user.address.city }}'{% else %}undefined{% endif %},
+                member_since: '{{ user.created_on.isoformat() }}Z',
+                last_seen: {% if user.last_seen %}'{{ user.last_seen.isoformat() }}Z'{% else %}undefined{% endif %},
             });
         {% endfor %}
-    }
 
-    var users = [];
-    {% for user in users %}
-        users.push({
-            profile: '{{ url_for('web.show_user', id=user.id) }}',
-            name: '{{ user.name }}',
-            institution: '{{ user.institution.name }}',
-            city: '{{ user.institution.city }}',
-            user_since: '{{ user.created_on.isoformat() }}Z',
-            last_seen: {% if user.last_seen %}'{{ user.last_seen.isoformat() }}Z'{% else %}undefined{% endif %},
+        $(document).ready(function () {
+
+            $('#users').DataTable({
+
+                data: users,
+                columns: [
+                    {
+                        data: function (user) {
+                            return geopd.dom.link(user.profile, user.last_name + ', ' + user.given_names);
+                        }
+                    },
+                    {
+                        data: 'institution'
+                    },
+                    {
+                        data: 'city'
+                    },
+                    {
+                        data: function (user) {
+                            return geopd.dom.datetime(user.member_since);
+                        }
+                    },
+                    {
+                        data: function (user) {
+                            return geopd.dom.datetime(user.last_seen);
+                        }
+                    },
+                ],
+
+                paging: true,
+                ordering: true,
+                searching: true,
+                order: [[0, 'asc']],
+                deferRender: true,
+            });
+
+            $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+                google.maps.event.trigger(map, 'resize');
+            });
         });
-    {% endfor %}
-
-    $(document).ready(function () {
-
-        $('#users').DataTable({
-
-            data: users,
-            columns: [
-                {data: function(user) {
-                    return geopd.dom.link(user.profile, user.name);
-                }},
-                {data: 'institution'},
-                {data: 'city'},
-                {data: function(user) {
-                    return geopd.dom.datetime(user.member_since);
-                }},
-                {data: function(user) {
-                    return geopd.dom.datetime(user.last_seen);
-                }},
-            ],
-
-            paging: true,
-            ordering: true,
-            searching: true,
-            order: [[0, 'asc']],
-            deferRender: true,
-        });
-
-        $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
-            google.maps.event.trigger(map, 'resize');
-        });
-    });
-</script>
+    </script>
 {% endblock %}
