--- a/src/geopd/templates/auth/register.html
+++ b/src/geopd/templates/auth/register.html
@@ -70,11 +70,11 @@
                                         <span class="glyphicon glyphicon-lock"></span>
                                     </span>
                                     <input class="form-control" type="password"
-                                           id="{{ form.password.id }}" ,
-                                           name="{{ form.password.name }}" ,
+                                           id="{{ form.password.id }}"
+                                           name="{{ form.password.name }}"
                                            placeholder="{{ form.password.label.text }}"
                                            required="required"
-                                           data-minlength="8" ,
+                                           data-minlength="8"
                                            data-minlength-error="password must include at least 8 characters">
                                 </div>
                                 <div class="help-block with-errors"></div>
@@ -85,8 +85,8 @@
                                         <span class="glyphicon glyphicon-lock"></span>
                                     </span>
                                     <input class="form-control" type="password"
-                                           id="{{ form.confirm.id }}" ,
-                                           name="{{ form.confirm.name }}" ,
+                                           id="{{ form.confirm.id }}"
+                                           name="{{ form.confirm.name }}"
                                            placeholder="{{ form.confirm.label.text }}"
                                            required="required"
                                            data-match="#{{ form.password.id }}"
@@ -97,10 +97,7 @@
 
                             <hr/>
 
-                            <p class="text-muted">
-                                <span class="glyphicon glyphicon-question-sign"></span>
-                                Please enter the name of your institution, address, or city.
-                            </p>
+                            <!-- Institution and Address //-->
 
                             <div class="form-group">
                                 <div class="input-group">
@@ -108,8 +105,8 @@
                                         <span class="glyphicon glyphicon-home"></span>
                                     </span>
                                     <input class="form-control" autocomplete="off"
-                                           id="{{ form.location.id }}" ,
-                                           name="{{ form.location.name }}" ,
+                                           id="{{ form.location.id }}"
+                                           name="{{ form.location.name }}"
                                            placeholder="{{ form.location.label.text }}"
                                            required="required">
                                     {{ form.institution }}
@@ -121,6 +118,24 @@
 
                             <div id="address" class="collapse">
 
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <span class="input-group-addon">{{ form.department.label.text }}</span>
+                                        <input class="form-control"
+                                               value="{{ request.form.department }}"
+                                               id="{{ form.department.id }}" name="{{ form.department.name }}"/>
+                                    </div>
+                                    <div class="help-block with-errors"></div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <span class="input-group-addon">{{ form.website.label.text }}</span>
+                                        <input class="form-control"
+                                               value="{{ request.form.website }}" type="url"
+                                               id="{{ form.website.id }}" name="{{ form.website.name }}"/>
+                                    </div>
+                                    <div class="help-block with-errors"></div>
+                                </div>
                                 <div class="form-group">
                                     <div class="row">
                                         <div class="col-md-12">
@@ -205,7 +220,6 @@
         var componentMap = {
             premise: 'institution',
             locality: 'city',
-            administrative_area_level_3: 'city',
             country: 'country',
             administrative_area_level_1: 'region',
             street_number: 'street',
@@ -219,7 +233,7 @@
         function initAutocomplete() {
             // create the autocomplete object (restrict search to geographical location)
             autocomplete = new google.maps.places.Autocomplete(document.getElementById('location'), {
-                types: ['geocode']
+                types: ['establishment']
             });
             autocomplete.addListener('place_changed', fillInAddress);
         }
@@ -240,10 +254,10 @@
             }
 
             if ('name' in place.html_attributions) {
-                address['institution'] =  place.html_attributions.name
+                address['institution'] = place.html_attributions.name
             }
 
-            $.each(address, function(key, value) {
+            $.each(address, function (key, value) {
                 $('#' + key).val(value);
             });
             $('#address').collapse('show');
