--- a/src/geopd/templates/users/profile/address.html
+++ b/src/geopd/templates/users/profile/address.html
@@ -1,4 +1,5 @@
-<form action="{{ url_for('web.update_user_address', id=current_user.id) }}" method="post">
+<form action="{{ url_for('web.update_user_address', id=current_user.id) }}"
+      method="post" data-toggle="validator">
     {{ address_form.csrf_token }}
     <div class="form-group">
         <div class="input-group">
@@ -6,18 +7,36 @@
                 <span class="glyphicon glyphicon-home"></span>
             </span>
             <input class="form-control" autocomplete="off"
-                   id="{{ address_form.location.id }}" ,
-                   name="{{ address_form.location.name }}" ,
-                   placeholder="{{ address_form.location.label.text }}"
-                   required="required">
+                   id="{{ address_form.location.id }}"
+                   name="{{ address_form.location.name }}"
+                   placeholder="{{ address_form.location.label.text }}">
             {{ address_form.institution }}
             {{ address_form.lng }}
             {{ address_form.lat }}
         </div>
-        <div class="help-block with-errors"></div>
     </div>
 
     <div id="address" class="collapse">
+
+        <div class="form-group">
+            <div class="input-group">
+            <span class="input-group-addon">{{ address_form.department.label.text }}</span>
+                <input class="form-control" autocomplete="off"
+                       id="{{ address_form.department.id }}"
+                       name="{{ address_form.department.name }}">
+            </div>
+            <div class="help-block with-errors"></div>
+        </div>
+
+        <div class="form-group">
+            <div class="input-group">
+            <span class="input-group-addon">{{ address_form.website.label.text }}</span>
+                <input class="form-control" autocomplete="off"
+                       id="{{ address_form.website.id }}" type="url"
+                       name="{{ address_form.website.name }}">
+            </div>
+            <div class="help-block with-errors"></div>
+        </div>
 
         <div class="form-group">
             <div class="row">
