--- a/src/geopd/templates/users/profile/header.html
+++ b/src/geopd/templates/users/profile/header.html
@@ -30,12 +30,9 @@
             <a href="mailto:{{ user.email }}?Subject=[GEoPD]%20" target="_top">{{ user.email }}</a>
         </p>
         <p class="text-muted">Member since
-            <time class="moment">{{ user.created_on|datetime }}</time>
-            .
+            <time class="moment">{{ user.created_on|datetime }}</time>.
             {% if user.last_seen %}
-                Last Seen
-                <time class="moment">{{ user.last_seen|datetime }}</time>
-                .
+                Last Seen <time class="moment">{{ user.last_seen|datetime }}</time>.
             {% endif %}
         </p>
     </div>
