--- a/src/geopd/templates/auth/register.html
+++ b/src/geopd/templates/auth/register.html
@@ -96,94 +96,7 @@
                             </div>
 
                             <hr/>
-
-                            <!-- Institution and Address //-->
-
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-home"></span>
-                                    </span>
-                                    <input class="form-control" autocomplete="off"
-                                           id="{{ form.location.id }}"
-                                           name="{{ form.location.name }}"
-                                           placeholder="{{ form.location.label.text }}"
-                                           required="required">
-                                    {{ form.institution }}
-                                    {{ form.lng }}
-                                    {{ form.lat }}
-                                </div>
-                                <div class="help-block with-errors"></div>
-                            </div>
-
-                            <div id="address" class="collapse">
-
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <span class="input-group-addon">{{ form.department.label.text }}</span>
-                                        <input class="form-control"
-                                               value="{{ request.form.department }}"
-                                               id="{{ form.department.id }}" name="{{ form.department.name }}"/>
-                                    </div>
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <span class="input-group-addon">{{ form.website.label.text }}</span>
-                                        <input class="form-control"
-                                               value="{{ request.form.website }}" type="url"
-                                               id="{{ form.website.id }}" name="{{ form.website.name }}"/>
-                                    </div>
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="input-group">
-                                                <span class="input-group-addon">{{ form.street.label.text }}</span>
-                                                {{ form.street(class='form-control', readonly='readonly') }}
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="input-group">
-                                                <span class="input-group-addon">{{ form.city.label.text }}</span>
-                                                {{ form.city(class='form-control', readonly='readonly') }}
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="input-group">
-                                                <span class="input-group-addon">{{ form.region.label.text }}</span>
-                                                {{ form.region(class='form-control', readonly='readonly') }}
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="input-group">
-                                                <span class="input-group-addon">{{ form.postal.label.text }}</span>
-                                                {{ form.postal(class='form-control', readonly='readonly') }}
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="input-group">
-                                                <span class="input-group-addon">{{ form.country.label.text }}</span>
-                                                {{ form.country(class='form-control', readonly='readonly') }}
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
+                            {% include 'util/address.html' %}
                             <hr/>
 
                             <div class="form-group">
@@ -197,7 +110,8 @@
 
                             <div id="terms" class="collapse">
                                 <div class="well">
-                                    {% include 'auth/terms.html' %}
+
+                                    {% include 'auth/terms.html' with context %}
                                 </div>
                             </div>
 
@@ -216,52 +130,7 @@
     {{ super() }}
     <script>
 
-        var autocomplete;
-        var componentMap = {
-            premise: 'institution',
-            locality: 'city',
-            country: 'country',
-            administrative_area_level_1: 'region',
-            street_number: 'street',
-            route: 'route',
-            postal_code: 'postal',
-            postal_code_prefix: 'postal'
-        }
-
-        var address = {};
-
-        function initAutocomplete() {
-            // create the autocomplete object (restrict search to geographical location)
-            autocomplete = new google.maps.places.Autocomplete(document.getElementById('location'), {
-                types: ['establishment']
-            });
-            autocomplete.addListener('place_changed', fillInAddress);
-        }
-
-        function fillInAddress() {
-            // Get the place details from the autocomplete object.
-            var place = autocomplete.getPlace();
-            $('#lat').val(place.geometry.location.lat());
-            $('#lng').val(place.geometry.location.lng());
-            $.each(place.address_components, function (i, component) {
-                if (component.types[0] in componentMap) {
-                    address[componentMap[component.types[0]]] = component.long_name;
-                }
-            });
-
-            if (address.street && address.route) {
-                address.street += ' ' + address.route
-            }
-
-            if ('name' in place.html_attributions) {
-                address['institution'] = place.html_attributions.name
-            }
-
-            $.each(address, function (key, value) {
-                $('#' + key).val(value);
-            });
-            $('#address').collapse('show');
-        }
+        {% block js_address %}{% endblock %}
 
         $(document).ready(function () {
             $('#accept').change(function () {
@@ -269,6 +138,4 @@
             });
         });
     </script>
-    <script src="{{ geopd.get('google.api', 'map_url') }}?key={{ geopd.get('google.api', 'key') }}&libraries=places&callback=initAutocomplete"
-            async defer></script>
 {% endblock %}
