bug fix: checkboxes disabled

--- a/src/geopd/templates/users/profile/scripts.html
+++ b/src/geopd/templates/users/profile/scripts.html
@@ -138,7 +138,7 @@
 
     <script>
         $(document).ready(function () {
-            $('#survey input[type=checkbox], #survey input[type=radio]').prop('disabled', true);
+            $('#survey-pane input[type=checkbox], #survey-pane input[type=radio]').prop('disabled', true);
         });
     </script>
 
