bug fix: using a property instead of __str__ to render address as a string, for utf8 support

--- a/src/geopd/templates/users/profile/header.html
+++ b/src/geopd/templates/users/profile/header.html
@@ -22,7 +22,7 @@
         <p class="text-muted">
             <span class="glyphicon glyphicon-map-marker"></span>
             {{ user.address.institution_full }}<br/>
-            <small><em>{{ user.address }}</em></small>
+            <small><em>{{ user.address.long }}</em></small>
         </p>
         {% endif %}
         <p>
