--- a/src/geopd/templates/base/scripts.html
+++ b/src/geopd/templates/base/scripts.html
@@ -22,6 +22,8 @@
 <script type="text/javascript" charset="utf8"
         src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
 <script type="text/javascript" src="//cdn.tinymce.com/4/tinymce.min.js"></script>
+<script src="{{ geopd.get('google.api', 'map_url') }}?key={{ geopd.get('google.api', 'key') }}&libraries=places&callback=initAutocomplete"
+        async defer></script>
 {% assets "js" %}
     <script type="text/javascript" charset="utf8" src="{{ ASSET_URL }}"></script>
 {% endassets %}
