--- a/src/geopd/templates/util/address.html
+++ b/src/geopd/templates/util/address.html
@@ -131,9 +131,12 @@
             $.each(address, function (key, value) {
                 $('#' + key).val(value);
             });
+
+            console.log(address['country']);
+            if ($.inArray(address['country'], ['Canada', 'United States']) == -1) {
+                $('#region').parents('.input-group').css('visibility', 'hidden');
+            }
             $('#address').collapse('show');
         }
     </script>
-    <script src="{{ geopd.get('google.api', 'map_url') }}?key={{ geopd.get('google.api', 'key') }}&libraries=places&callback=initAutocomplete"
-            async defer></script>
 {% endblock %}
