added basic post listing

--- a/src/geopd/templates/base/styles.html
+++ b/src/geopd/templates/base/styles.html
@@ -3,6 +3,8 @@
 <link rel="stylesheet" href="//cdn.datatables.net/fixedcolumns/3.2.1/css/fixedColumns.dataTables.min.css">
 <link rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/css/bootstrapValidator.min.css">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='markitup/skins/markitup/style.css') }}" />
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='markitup/sets/markdown/style.css"') }}" />
 {% assets "css" %}
 <link rel="stylesheet" href="{{ ASSET_URL }}">
 {% endassets %}
