--- a/src/geopd/templates/base/scripts.html
+++ b/src/geopd/templates/base/scripts.html
@@ -21,7 +21,8 @@
         src="//cdn.datatables.net/buttons/1.1.2/js/buttons.colVis.min.js"></script>
 <script type="text/javascript" charset="utf8"
         src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
-<script type="text/javascript" src="//cdn.tinymce.com/4/tinymce.min.js"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='markitup/jquery.markitup.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='markitup/sets/markdown/set.js') }}"></script>
 <script src="{{ geopd.get('google.api', 'map_url') }}?key={{ geopd.get('google.api', 'key') }}&libraries=places&callback=initAutocomplete"
         async defer></script>
 {% assets "js" %}
