--- a/src/geopd/templates/users/profile/scripts.html
+++ b/src/geopd/templates/users/profile/scripts.html
@@ -16,7 +16,6 @@
         var address = {};
 
         function initAutocomplete() {
-            // create the autocomplete object (restrict search to geographical location)
             autocomplete = new google.maps.places.Autocomplete(document.getElementById('location'), {
                 types: ['establishment']
             });
@@ -24,7 +23,6 @@
         }
 
         function fillInAddress() {
-            // Get the place details from the autocomplete object.
             var place = autocomplete.getPlace();
             $('#lat').val(place.geometry.location.lat());
             $('#lng').val(place.geometry.location.lng());
@@ -54,7 +52,7 @@
 
         $(document).ready(function () {
 
-            var info_update_url = '{{ url_for('ajax.update_user_info', id=current_user.id) }}';
+            var info_update_url = '{{ url_for('web.update_user_info', id=current_user.id) }}';
 
             $('#survey input[type=checkbox], #survey input[type=radio]').click(function (e) {
                 $.post(info_update_url, {
@@ -94,7 +92,7 @@
             });
 
             $("#avatar").fileinput({
-                uploadUrl: "{{ url_for('ajax.update_user_info', id=current_user.id) }}",
+                uploadUrl: "{{ url_for('web.update_user_info', id=current_user.id) }}",
                 uploadAsync: true,
                 uploadExtraData: {
                     name: 'avatar'
@@ -129,6 +127,8 @@
             });
         });
     </script>
+    <script src="{{ geopd.get('google.api', 'map_url') }}?key={{ geopd.get('google.api', 'key') }}&libraries=places&callback=initAutocomplete"
+        async defer></script>
 {% else %}
 
     <script>
