--- a/src/geopd/templates/auth/login.html
+++ b/src/geopd/templates/auth/login.html
@@ -34,7 +34,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="help-block with-errors"></div>
+            <!-- <div class="help-block with-errors"></div> //-->
         </div>
 
     </form>
