--- a/src/geopd/templates/publications.html
+++ b/src/geopd/templates/publications.html
@@ -12,7 +12,7 @@
                         <div class="publication">
                             {% if pub.pdf_url %}
                             <a href="{{ pub.pdf_url }}" class="pull-right">
-                                <img alt="pdf" title="Download PDF" size=""
+                                <img alt="pdf" title="Download PDF"
                                      src="{{ url_for('static', filename='images/pdf.png') }}">
                             </a>
                             {% endif %}
